--- a/Home.css
+++ b/Home.css
@@ -2,13 +2,15 @@ body {
     margin: 0;
     padding: 0;
     background-color: #0B1416;
+    --Border-Lines: #2d2d2e;
     box-sizing: border-box;
-    --Border-Lines: #393A3B;
+    font-family: Arial, Helvetica, sans-serif;
 }
 div a {
     color: inherit;
-    text-decoration: none; 
+    text-decoration: none;
 }
+
 
 /* Top Navbar START */
 .Top_Navbar {
@@ -24,118 +26,134 @@ div a {
     border-bottom: 1px solid var(--Border-Lines);
 }
 .Logo {
-    margin: 0; 
-}
-
-.Person_Icon{
-    margin-right: 20px;
+    margin: 0;
 }
 .Person_Icon,
 .Notification_Icon,
-.Add{
-    color:#f0ebeb;
+.Add {
+    margin-right: 20px;
+    color: #f0ebeb;
     font-size: 40px;
 }
-/* Top Navbar END*/
+/* Top Navbar END */
 
 
 /* Search Bar START */
 .Search_Bar {
-    padding: 20px;
     display: flex;
     align-items: center;
-    flex-grow: 1; 
-    justify-content: center; 
+    flex-grow: 1;
+    justify-content: center;
 }
 .Search_Container {
     position: relative;
+    font-size: 30px;
 }
 .Search_Icon {
     position: absolute;
-    left: 10px;
+    left: 20px;
     top: 50%;
     transform: translateY(-50%);
-    color: #f0ebeb; 
+    color: #f0ebeb;
 }
 .Search_Input {
-    width: 500px;
+    width: 1000px;
     background-color: #1A282D;
-    padding: 15px 40px;
+    padding: 20px 60px;
     border: none;
-    border-radius: 20px;
+    border-radius: 30px;
+    font-size: 20px;
 }
 /* Search Bar END */
 
 
 /* Side Navbar START */
 .Side_Navbar {
-    background-color: #0B1416;;
+    margin-left: 120px;
+    background-color: #0B1416;
     width: 200px;
     height: 100vh;
     position: fixed;
     border-right: 1px solid var(--Border-Lines);
 }
-
-.Sidebar_Home {
-    text-decoration: none;
-    padding-bottom: 20px;
-    margin-top: 140px;
-    margin-left: 30px;
+.Side_Navbar a {
     color: #f0ebeb;
     font-size: 18px;
-    text-align: start;
-    position: relative;
+    padding: 8px;
 }
-
-.Sidebar_profile {
-    padding-bottom: 20px;
-    margin-left: 30px;
-    text-decoration: none;
-    color: #f0ebeb;
-    font-size: 18px;
-    text-align: start;
-    position: relative;
-}
-
+.Sidebar_Home,
+.Sidebar_profile,
 .Sidebar_Store {
     padding-bottom: 20px;
-    margin-left: 30px;
     text-decoration: none;
     color: #f0ebeb;
-    font-size: 18px;
+    font-size: 16px;
     text-align: start;
     position: relative;
 }
-
 .Sidebar_Store::after {
     content: "";
     display: block;
     border-bottom: 1px solid var(--Border-Lines);
-    width: 90%; 
+    width: 90%;
     position: absolute;
     bottom: 0;
 }
-
-/* Individual hover states for each element */
 .Sidebar_Store:hover,
 .Sidebar_profile:hover,
-.Sidebar_Home:hover {    
+.Sidebar_Home:hover {
     background-color: #393A3B;
     border-radius: 5px;
     width: 160px;
 }
-.Communities h3{
+.Communities h3 {
+    padding: 0px, 0px;
+    font-size: 16px;
+    color: #606a6b;
+}
+
+/* Side Navbar Community */
+.CreateCouminity {
+    color: #fffcfc;
     text-align: center;
-    color:#a09e9e;
+}
+/* Side Navbar END */
+
+
+/* Feed */
+.News_Feed {
+    margin-left: 340px; 
+    margin-top: 120px;
+    flex: 0.5;
+    width: calc(30% - 360px); 
+    min-width: fit-content;
+    overflow-y: auto;
+    scrollbar-width: none;
 
 }
-/*Side Navbar Community*/
-.CreateCouminity{
-    margin-left: 30px;
-    color:#fffcfc;
-    text-align: center;
+
+.News_Post {
+    background-color: #1A282D;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
-.CreateCouminity a{
-    color: #fffcfc;
+
+.News_Post h2 {
+    color: #f0ebeb;
+    font-size: 18px;
+    margin-bottom: 10px;
 }
-/* Side Navbar END*/
+
+.News_Post p {
+    color: #a0a0a0;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.News_Post a {
+    color: #00aaff;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 14px;
+}
