--- a/Login.css
+++ b/Login.css
@@ -62,3 +62,36 @@ form .txt_field{
     transition: .5s;
 }
 /* Login Form Labels END */
+
+a{
+    
+}
+
+button {
+    cursor: pointer;
+    border: 0;
+    border-radius: 4px;
+    font-weight: 600;
+    margin: 0 10px;
+    width: 300px;
+    padding: 10px 0;
+    transition: 0.4s;
+    display: block;
+    margin: 0 auto;
+  }
+
+  button:hover {
+    color: white;
+    background-color: black;
+  }
+  
+  .signup{
+    margin: 30px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+  }
+  .signup a{
+    color:aliceblue;
+    text-decoration: none;
+  }
