--- a/Signup.css
+++ b/Signup.css
@@ -1,3 +1,105 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #0B1416;
+    --Border-Lines: #2d2d2e;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+/* Login Form START */
+.center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #1A282D;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 20px rgba(0, 0, 0, 0.05);
+}
+/* Login Form END */
+
+.center h1{
+    color:#adadad ;
+    text-align: center;
+    padding: 20px 0;
+}
+.center form{
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+/* Login Form Username START */
+form .txt_field{
+    position: relative;
+    border-bottom: 2px solid #adadad;
+    margin: 30px 0;
+}
+/* Login Form Username END */
+
+
+/* Login Form Username/Password START */
+.txt_field input{
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    color: aliceblue;
+    border: none;
+    background: none;
+    outline: none;
+}
+/* Login Form Username/Password END */
+
+/* Login Form Labels START */
+.txt_field label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #666666;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.txt_field span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0px;
+  height: 2px;
+  background: aliceblue;
+  transition: .5s;
+}
+
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label{
+  top: -5px;
+  color: aliceblue;
+}
+
+.txt_field input:focus ~ span::before,
+.txt_field input:Valid ~ span::before{
+  width: 100%;
+}
+
+.pass{
+  margin: -5px 0 20px 5px;
+  color: #a6a6a6;
+  cursor: pointer;
+}
+
+.pass:hover{
+  text-decoration: underline;
+}
+
+/* Login Form Labels END */
+
+a{
+    
+}
+
 button {
     cursor: pointer;
     border: 0;
@@ -16,3 +118,13 @@ button {
     background-color: black;
   }
   
+  .signup{
+    margin: 30px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+  }
+  .signup a{
+    color:aliceblue;
+    text-decoration: none;
+  }
