--- a/Forum.css
+++ b/Forum.css
@@ -25,7 +25,7 @@ div a {
     border-bottom: 1px solid var(--Border-Lines);
 }
 .Logo {
-    
+    margin: 0;
 }
 .Person_Icon,
 .Notification_Icon,
@@ -70,7 +70,6 @@ div a {
 /* Side Navbar START */
 .Side_Navbar {
     padding-top: 90px;
-    margin-top: -100px;
     margin-left: 100px;
     background-color: #0B1416;
     width: 240px;
@@ -83,7 +82,6 @@ div a {
     font-size: 18px;
     padding: 8px;
 }
-.Message_Icon,
 .Sidebar_Home,
 .Sidebar_profile,
 .Sidebar_Store {
@@ -109,61 +107,3 @@ div a {
     width: 160px;
 }
 
-
-/* Side Navbar Community */
-.Communities h3 {
-    font-size: 16px;
-    color: #606a6b;
-}
-.Sidebar_Create {
-    color: #fffcfc;
-}
-.Sidebar_Create a {
-    font-size: 16px;
-}
-/* Side Navbar END */
-
-
-/* Feed START */
-.Label{
-    font-size: 22px;
-    color: #f0ebeb;
-    margin-top: 120px; 
-    margin-left: 45%; 
-    width: 50%;
-    transform: translateX(-50%); 
-    border-bottom: 1px solid var(--Border-Lines);
-}
-.Feed_Container{
-    margin-top: 40px; 
-    margin-left: 360px;
-    flex: 0.5;
-    width: calc(30% - 360px);
-    min-width: fit-content;
-    overflow-y: scroll;
-    scrollbar-width: none;
-}
-.News_Post {
-    background-color: #1A282D;
-    padding: 20px;
-    width: 50%;
-    margin-bottom: 20px;
-    border-radius: 10px;
-}
-.News_Post h2 {
-    color: #f0ebeb;
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-.News_Post p {
-    color: #a0a0a0;
-    font-size: 14px;
-    margin-bottom: 10px;
-}
-.News_Post a {
-    color: #00aaff;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 14px;
-}
-/* Feed END */
