--- a/Forum.css
+++ b/Forum.css
@@ -119,7 +119,14 @@ div a {
 }
 /* Side Navbar END */
 
-
+.Label{
+    font-size: 22px;
+    color: #f0ebeb;
+    margin-top: 120px; 
+    margin-left: 50%; 
+    width: 50%;
+    transform: translateX(-50%); 
+}
 .Feed_Container {
     margin-top: 50px;
     margin-left: 360px;
