--- a/Profile.css
+++ b/Profile.css
@@ -282,4 +282,211 @@ div a {
     text-decoration: none;
     font-weight: bold;
 }
+/* Timeline START */
+.Timeline {
+    margin-left: 360px;
+    margin-right: 220px;
+    display: flex;
+    flex-direction: column;
+}
+
+.Timeline_Item {
+    margin-bottom: 20px;
+    width: 66%;
+    border-radius: 20px;  
+    background-color:#1A282D;
+    padding: 50px;
+}
+
+.Timeline_Content {
+    color: aliceblue;
+    display: flex;
+    align-items: flex-start;
+}
+
+.Timeline_Content img{
+    width: 60px;
+    border-radius: 30px;
+    margin-right: 10px;
+}
+
+.Timeline_Content h5 {
+    margin-left: 5px;
+    color: #606a6b;
+}
+
+.Timeline_Caption{
+    color: aliceblue;
+}
+
+.icon_buttons {
+    color: aliceblue;
+    justify-content: space-between;
+    align-items: center;
+
+}
+/* Timeline END */
+
+
 /* Side-Profile START */
+.Side_Profile {
+    background-color: #1A282D;
+    padding: 20px;
+    margin-left: 1100px;
+    border-radius: 10px;
+}
+
+.Profile_Info {
+    display: flex;
+    align-items: center;
+}
+
+.Profile_Pic img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.Profile_Description {
+    margin-left: 15px;
+}
+
+.Profile_Description h3 {
+    margin: 0;
+    color: #f0ebeb;
+}
+
+.Profile_Description p {
+    margin: 5px 0;
+    color: #f0ebeb;
+}
+
+.Profile_Description a {
+    color: #f0ebeb;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+
+/* Side-Profile START */
+.container {
+    display: flex;
+    justify-content: flex-end;
+    padding: 13px 5%;
+}
+
+.profile-sidebar {
+    width: 300px;
+    padding: 20px;
+    border-radius: 8px;
+    background: linear-gradient(to bottom, #013a3a 0%, #1d5061 40%, #088f8f 100%);
+}
+
+.profile-sidebar:before {
+    content: '';
+    display: block;
+    height: 100px;
+}
+
+.sidebar-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.sidebar-title h4 {
+    margin: 0;
+}
+
+.sales{
+    display: flex;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+.right-sales{
+    line-height: 0.2;
+}
+.left-sales{
+    border-radius: 10px;
+    height: 65px;
+    width: 65px;
+    margin-right: 15px;
+    padding-top: 10px;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+}
+.sales p{
+    font-size: 12px;
+}
+.sales a{
+    font-size: 12px;
+    text-decoration: none;
+    color: #9acd32;
+}
+.left-sales span{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: #01796f;
+    color: #fff;
+    font-size: 10px;
+    padding: 4px 0;
+}
+
+.share-button,
+.profile-actions button {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 50px;
+    background-color: #01796f;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.share-button:hover,
+.profile-actions button:hover {
+    border: 1px;
+    border-radius: 20px;
+    background-color: #33464C;
+}
+
+.profile-description {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.profile-description p {
+    padding: 10px;
+    margin-right: 30px;
+    margin: 5px 0;
+    border: none;
+    border-radius: 4px;
+}
+
+.profile-actions {
+    margin-top: 20px;
+}
+
+.profile-actions button {
+    padding: 10px 20px;
+    margin-right: 30px;
+    border: none;
+    border-radius: 4px;
+    background-color: #01796f;
+    color: white;
+    cursor: pointer;
+}
+
+.profile-actions button:last-child {
+    margin-right: 0;
+}
+
+.profile-actions button:hover {
+    background-color: #33464C;
+}
+/* Side-Profile End */
