--- a/marketplace.css
+++ b/marketplace.css
@@ -121,10 +121,11 @@ div a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     padding: 10px;
-    background-color:#394D62;
+    background-color:#1A282D;
     color: #6EACF0;
     border-radius: 5px;
     border: none;
+    
 }
 /* Side Navbar END */
 
