--- a/Signup.css
+++ b/Signup.css
@@ -59,7 +59,7 @@ form .txt_field{
     transform: translateY(-50%);
     font-size: 16px;
     pointer-events: none;
-    transition: .5s;
+    
 }
 
 .txt_field span::before{
@@ -96,10 +96,6 @@ form .txt_field{
 
 /* Login Form Labels END */
 
-a{
-    
-}
-
 button {
     cursor: pointer;
     border: 0;
@@ -113,18 +109,41 @@ button {
     margin: 0 auto;
   }
 
-  button:hover {
-    color: white;
-    background-color: black;
-  }
-  
-  .signup{
-    margin: 30px 0;
-    text-align: center;
-    font-size: 16px;
-    color: #666666;
-  }
-  .signup a{
-    color:aliceblue;
-    text-decoration: none;
-  }
+button:hover {
+  color: white;
+  background-color: black;
+}
+
+.signup{
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
+}
+.signup a{
+  color:aliceblue;
+  text-decoration: none;
+}
+
+.signup_link{
+  margin: 30px 0;
+  text-align: center;
+  font-size: 16px;
+  color: #666666;
+}
+
+.signup_link a{
+  color:aliceblue;
+  text-decoration: none;
+}
+
+.signup_link a:hover{
+  text-decoration: underline;
+}
+
+
+form i {
+  margin-left: -30px;
+  cursor: pointer;
+  color:aliceblue;
+}
