--- a/Forum.css
+++ b/Forum.css
@@ -110,7 +110,12 @@ div a {
 }
 .Sidebar_Store:hover,
 .Sidebar_profile:hover,
-.Sidebar_Home:hover {
+.Sidebar_Home:hover,
+.Sidebar_Notification:hover,
+.Sidebar_Inbox:hover,
+.Sidebar_About:hover,
+.Sidebar_Question:hover,
+.Sidebar_Settings:hover {
     background-color: #393A3B;
     border-radius: 5px;
     width: 160px;
