--- a/Profile.css
+++ b/Profile.css
@@ -313,6 +313,7 @@ div a {
 }
 
 .sidebar-title h2 {
+    color: aliceblue;
     margin: 0;
 }
 
@@ -336,7 +337,12 @@ div a {
     box-shadow: 0 0 10px rgb(0, 0, 0);
 }
 .sales p{
+    color: aliceblue;
     font-size: 12px;
+}
+.sales h4,
+.sales h3{
+    color: aliceblue;
 }
 .sales a{
     font-size: 12px;
@@ -384,6 +390,7 @@ div a {
     margin: 5px 0;
     border: none;
     border-radius: 4px;
+    color: aliceblue;
 }
 
 .edit-profile .edit,
