--- a/Forum.css
+++ b/Forum.css
@@ -67,6 +67,11 @@ div a {
     border-radius: 30px;
     font-size: 16px;
 }
+
+.Sidebar_Create button:hover{
+    background-color:#2a4149;
+    
+}
 /* Search Bar END */
 
 
@@ -142,6 +147,7 @@ div a {
     color: #00aaff;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
 }
 .Sidebar_Create{
     margin-right: 20px;
