--- a/marketplace.css
+++ b/marketplace.css
@@ -142,6 +142,11 @@ div a {
     color: #6EACF0;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
+}
+.Sidebar_Create button:hover{
+    background-color:#2a4149;
+    
 }
 .Sidebar_Create{
     margin-right: 20px;
