--- a/Home.css
+++ b/Home.css
@@ -155,9 +155,8 @@ div a {
     font-size: 22px;
     color: #f0ebeb;
     margin-top: 120px; 
-    margin-left: 52%; 
+    margin-left: 20%; 
     width: 50%;
-    transform: translateX(-50%);
     border-bottom: 1px solid var(--Border-Lines); 
 }
 .Feed_Container{
@@ -233,3 +232,48 @@ div a {
     color: #f0ebeb;
 }
 /* RIGHT Side Navbar END */
+@media screen and (max-width: 414px) and (max-height:896px) {
+
+    .Top_Navbar{
+        width: 100%;
+    }
+    .Logo {
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size:small;
+    }
+    .Search_Bar {
+        display: contents;
+        padding: 10px 60px;
+    }
+    .Search_Container {
+        font-size:14px;
+    }
+    .Search_Input {
+        width: 50px;
+        font-size: 14px;
+    }
+    .Side_Navbar {
+        display: none;
+        margin-left: 0px;
+        padding-left: 10px;
+    }
+    .Side_Navbar.active {
+        display: block;
+    }
+    .Notification_Profile {
+        display: flex;
+        transform: scale(.5);
+        margin-right: 50px;
+    }
+    .Label{
+        margin-left: 8%; 
+    }
+    .Feed_Container{
+        margin-left: 8%; 
+        width: 92%;
+    }
+    .Navbar_Right{
+        display: none;
+    }
+}
