--- a/Profile.css
+++ b/Profile.css
@@ -9,8 +9,6 @@ body {
 div a {
     text-decoration: none;
 }
-
-
 /* Top Navbar START */
 .Top_Navbar {
     background-color: #0B1416;
@@ -25,7 +23,10 @@ div a {
     border-bottom: 1px solid var(--Border-Lines);
 }
 .Logo {
-    margin: 0;
+    text-decoration: underline;
+    font-weight: 900;
+    margin-left: 80px;
+    color: #f0ebeb;
 }
 .Person_Icon,
 .Notification_Icon,
@@ -35,8 +36,6 @@ div a {
     font-size: 40px;
 }
 /* Top Navbar END */
-
-
 /* Search Bar START */
 .Search_Bar {
     display: flex;
@@ -65,8 +64,6 @@ div a {
     font-size: 16px;
 }
 /* Search Bar END */
-
-
 /* Side Navbar START */
 .Side_Navbar {
     padding-top: 90px;
@@ -109,8 +106,6 @@ div a {
     width: 160px;
     cursor: pointer;
 }
-
-
 /* Side Navbar Community */
 .Communities h3 {
     font-size: 16px;
@@ -119,44 +114,37 @@ div a {
 .Sidebar_Create {
     color: #fffcfc;
 }
-
 .Sidebar_Create:hover{
     background-color: #393A3B;
     border-radius: 5px;
     width: 170px;
     cursor: pointer;
 }
-
 .Sidebar_Create a {
     font-size: 16px;
 }
 /* Side Navbar END */
-
-
 /* Feed START */
 .Label{
     color: #f0ebeb;
     margin-top: 120px; 
-    margin-left: 63%; 
-    width: 100%;
-    transform: translateX(-40%); 
+    margin-left: 360px;
     border-bottom: 1px solid var(--Border-Lines);
 }
 .user{
     font-size: 22px;
     display: flex;
     align-items: center;
-    margin-left: 10px;
 }
 .profilePic{
-    width: 60px;
-    padding: 25px;
+    width: 40px;
+    height: 40px;
+    padding: 20px;
 }
 .profileNav{
     display: flex;
     align-items: center;
     margin-left: 10px;
-
 }
 .profileOption{
     padding: 0px 25px 0px 25px;
@@ -176,30 +164,20 @@ div a {
     align-items: center;
     margin: 10px 10px 20px 80px;
 }
-
 .CreateAPost{
     display: flex;
-    border: 1px solid aliceblue;
+    border: 1px solid #f0ebeb;
     padding: 10px 10px 10px 10px;
     border-radius: 18px;
     margin-left: 10px;
+    font-weight: 700;
+    font-size:x-small;
+    display: inline;
 }
 .CreateAPost a {
     color: #fffcfc;
 }
-
-.Feed_Container{
-    margin-top: 40px; 
-    margin-left: 360px;
-    flex: 0.5;
-    width: calc(30% - 360px);
-    min-width: fit-content;
-    overflow-y: scroll;
-    scrollbar-width: none;
-}
 /* Feed END */
-
-
 /* Side-Profile START */
 .Side_Profile {
     background-color: #1A282D;
@@ -207,54 +185,44 @@ div a {
     margin-left: 1100px;
     border-radius: 10px;
 }
-
 .Profile_Info {
     display: flex;
     align-items: center;
 }
-
 .Profile_Pic img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
-
 .Profile_Description {
     margin-left: 15px;
 }
-
 .Profile_Description h3 {
     margin: 0;
     color: #f0ebeb;
 }
-
 .Profile_Description p {
     margin: 5px 0;
     color: #f0ebeb;
 }
-
 .Profile_Description a {
     color: #f0ebeb;
     text-decoration: none;
     font-weight: bold;
 }
 /* Side-Profile END */
-
-
 /* Timeline START */
 .Timeline {
     margin-left: 360px;
-    margin-right: 0px;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
 }
-
 .column-content{
     display: flex;
     flex-direction: column;
     max-width: 60%;
 }
-
 .Timeline_Item {
     margin-bottom: 20px;
     width: 80%;
@@ -262,70 +230,51 @@ div a {
     background-color:#1A282D;
     padding: 50px;
 }
-
 .Timeline_Content {
     color: aliceblue;
-    display: flex;
-    align-items: flex-start;
+    display:inline-flex;
 }
-
 .Timeline_Content img{
-    width: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 30px;
     margin-right: 10px;
 }
-
 .Timeline_Content h5 {
     margin-left: 5px;
     color: #606a6b;
 }
-
 .Timeline_Caption{
     color: aliceblue;
 }
-
 .icon_buttons {
     color: aliceblue;
     justify-content: space-between;
     align-items: center;
-
 }
 /* Timeline END */
-
-
 /* Side-Profile START */
-
-.container {
-    display: flex;
-    justify-content: flex-end;
-    padding: 13px 5%;
-}
-
 .profile-sidebar {
     width: 300px;
     padding: 20px;
     border-radius: 8px;
     background: linear-gradient(to bottom, #013a3a 0%, #1d5061 40%, #088f8f 100%);
 }
-
 .profile-sidebar:before {
     content: '';
     display: block;
     height: 100px;
 }
-
 .sidebar-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
 }
-
 .sidebar-title h2 {
     color: aliceblue;
     margin: 0;
 }
-
 .sales{
     display: flex;
     font-size: 14px;
@@ -368,7 +317,6 @@ div a {
     font-size: 10px;
     padding: 4px 0;
 }
-
 .share-button,
 .edit-profile .edit,
 .add button {
@@ -380,19 +328,16 @@ div a {
     cursor: pointer;
     transition: all 0.3s ease;
 }
-
 .share-button:hover,
 .edit-profile .edit:hover,
 .add button:hover {
     border-radius: 20px;
     background-color: #33464C;
 }
-
 .profile-description {
     display: flex;
     flex-wrap: wrap;
 }
-
 .profile-description p {
     padding: 10px;
     margin-right: 30px;
@@ -401,12 +346,10 @@ div a {
     border-radius: 4px;
     color: aliceblue;
 }
-
 .edit-profile .edit,
 .add {
     margin-top: 20px;
 }
-
 .edit-profile .edit,
 .add button {
     padding: 10px 20px;
@@ -417,47 +360,84 @@ div a {
     color: white;
     cursor: pointer;
 }
-
 .edit-profile .edit:last-child,
 .add button:last-child {
     margin-right: 0;
 }
-
 .edit-profile .edit:hover,
 .add button:hover {
     background-color: #33464C;
 }
-
 .edit-profile {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
     justify-content: space-between;
 }
-
 .edit-profile .edit{
     max-width: 30%;
 }
-
 .desc h4,
 .desc p{
     margin: 0;
 }
-
 .desc p{
     font-size: 14px;
 }
-
 .desc{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     padding: 5px;
 }
-
 .editpic{
     width: 60px;
     border-radius: 50%;
 }
-
 /* Side-Profile End */
+@media screen and (max-width: 414px) and (max-height:896px) {
+    .Top_Navbar{
+        width: 100%;
+    }
+    .Logo {
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size:small;
+    }
+    .Search_Bar {
+        display: contents;
+        padding: 10px 60px;
+    }
+    .Search_Container {
+        font-size:14px;
+    }
+    .Search_Input {
+        width: 50px;
+        font-size: 14px;
+    }
+    .Side_Navbar {
+        display: none;
+        margin-left: 0px;
+        padding-left: 10px;
+    }
+    .Side_Navbar.active {
+        display: block;
+    }
+    .Notification_Profile {
+        display: flex;
+        transform: scale(.5);
+    }
+    .Label{
+        margin-left:0%;
+        padding-left: 8%;
+        width: 100%;
+    }
+    .Feed_Container{
+        margin-top: 120px;
+        margin-left: 8%;
+        width: 100%;
+    }
+    .Navbar_Right{
+        display: none;
+    }
+}
