--- a/marketplace.css
+++ b/marketplace.css
@@ -196,3 +196,56 @@ div a {
     background-color:#393A3B ;
 }
 /* Marketplaces END */
+@media screen and (max-width: 414px) and (max-height:896px) {
+
+    .Top_Navbar{
+        width: 100%;
+    }
+    .Logo {
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size:small;
+    }
+    .Search_Bar {
+        display: contents;
+        padding: 10px 60px;
+    }
+    .Search_Container {
+        font-size:14px;
+    }
+    .Search_Input {
+        width: 50px;
+        font-size: 14px;
+    }
+    .Side_Navbar {
+        display: none;
+        margin-left: 0px;
+        padding-left: 10px;
+    }
+    .Side_Navbar.active {
+        display: block;
+    }
+    .Notification_Profile {
+        display: flex;
+        transform: scale(.5);
+        margin-right: 50px;
+    }
+    .Label{
+        margin-left: 8%; 
+    }
+    .Feed_Container{
+        margin-left: 0%; 
+        width: 100%;
+    }
+    .Navbar_Right{
+        display: none;
+    }
+    
+    .News_Row{
+        flex-direction: column;
+        align-items: center;
+    }
+    .News_Post {
+        width: calc(73% - 40px); 
+    }
+}
