--- a/Forum.css
+++ b/Forum.css
@@ -66,6 +66,7 @@ div a {
     border: none;
     border-radius: 30px;
     font-size: 16px;
+    color: #f0ebeb;
 }
 
 .Sidebar_Create button:hover{
