--- a/Profile.css
+++ b/Profile.css
@@ -62,6 +62,7 @@ div a {
     border: none;
     border-radius: 30px;
     font-size: 16px;
+    color: #f0ebeb;
 }
 /* Search Bar END */
 /* Side Navbar START */
