--- a/marketplace.css
+++ b/marketplace.css
@@ -155,6 +155,56 @@ div a {
     border-bottom: 1px solid var(--Border-Lines);
 }
 
+.Sidebar_Create input{
+    color: #f0ebeb;
+}
+
+.Sidebar_Create input[type=text]{
+    background-color: #1A282D;
+    color:#f0ebeb;
+    border-radius: 5px;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    padding: 10px;
+}
+.Sidebar_Create input[type=text]::placeholder{
+   color: #f0ebeb;
+}
+.Sidebar_Create textarea{
+    background-color: #1A282D;
+    color:#f0ebeb;
+    border-radius: 5px;
+    border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    padding: 10px;
+    overflow: hidden;
+    resize: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.Sidebar_Create textarea::placeholder{
+    color:#f0ebeb;
+}
+
+.Sidebar_Create input[type=file]::file-selector-button {
+    background-color: #1A282D;
+    color: #6EACF0;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    padding: 10px;
+}
+.Sidebar_Create input[type=file]::file-selector-button:hover{
+    background-color:#2a4149;
+    
+}  
 
 /* Side Navbar END */
 
