--- a/marketplace.css
+++ b/marketplace.css
@@ -168,6 +168,7 @@ div a {
     margin-bottom: 10px;
     font-size: 16px;
     padding: 10px;
+    width: 200px;
 }
 .Sidebar_Create input[type=text]::placeholder{
    color: #f0ebeb;
@@ -184,6 +185,7 @@ div a {
     overflow: hidden;
     resize: none;
     font-family: Arial, Helvetica, sans-serif;
+    width: 200px;
 }
 
 .Sidebar_Create textarea::placeholder{
